--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -8,6 +8,17 @@
     margin-top: 50px;
 }
 
+    .project > p{
+        font-size: 60px;
+        font-weight:800;
+        letter-spacing: 1.8px;
+        margin: 30px 0px;
+        text-align: left;
+        text-transform: uppercase;
+        text-decoration:overline;
+        text-decoration-color: white;
+    }
+
 .project_background{
     left: 0px;
     opacity: 0.7;
