--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -1,6 +1,6 @@
 .project{
     position: relative;
-    min-height: calc(100vh - 250px);
+    min-height: 100vh;
     overflow-x: hidden;
     display: block;
     top: 72px;
@@ -49,14 +49,14 @@
     position: relative;
     transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
     border: 3px solid rgba(249, 249, 249, 0.1);
+    background: rgba(0, 0, 0, 0.3);
 }
 
     .project_wrap > a > img{
-        inset: 0px;
         display: block;
         height: 100%;
-        object-fit: cover;
         opacity: 1;
+        object-fit:contain;
         position: absolute;
         transition: opacity 500ms ease-in-out 0s;
         width: 100%;
