--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -37,6 +37,7 @@
     grid-gap: 25px;
     gap: 25px;
     grid-template-columns: repeat(4, minmax(0, 1fr)); 
+    padding-bottom: 40px;
 }
 
 .project_wrap{
